test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/deref_incomplete_struct_pointer.plx
type struc s;

pub ptr: *struc s = 0

pub fn main(none) i32 {
    #  can't dereference pointer to incomplete type
    #  except in expression &*ptr
    ptr[]
    return 0
}
